--- a/Day 7/Level 3/level3.html
+++ b/Day 7/Level 3/level3.html
@@ -10,7 +10,8 @@
 <body>
     <script>
 
-        // q1
+        // These are level 3 exercises
+
         // let givenn = 'abcdefghijklmnopqrstuvwxyz0123456789'
         // let id = ''
         // let arr = [];
