--- a/prime numbers/index.html
+++ b/prime numbers/index.html
@@ -16,6 +16,7 @@
             console.log(`${number} is not a prime number.`)
         } else {
             for (let i = 2; i < number; i++) {
+                console.log(i)
                 if (number % i != 0) {
                     var result = `${number} is a prime number.`
                     break;
