--- a/ex/shufflearray.html
+++ b/ex/shufflearray.html
@@ -21,40 +21,39 @@
             do {
                 let random_num = original_array[Math.floor(Math.random() * original_array.length)]
                 // let random_num = Math.floor(Math.random() * original_array.length)
-
-
                 if (!random_array.includes(random_num)) {
                     random_array.push(random_num)
                 }
                 // console.log(temp)
             } while (random_array.length < 5)
-
         });
 
         // console.log(random_array)
 
         // q17
-        let hexa = '';
-        let given = "abcdef0123456789";
-        function randomHexaNumberGenerator(xyz) {
-            let hex_array = []
-            for (let index = 0; index < xyz; index++) {
-                hexa = ''
-                for (let i = 0; i < 6; i++) {
-                    hexa += (given[Math.floor(Math.random() * 15)])
-                }
-                hex_array.push(`#${hexa}`)
-            }
-            console.log(hex_array)
+        // let hexa = '';
+        // let given = "abcdef0123456789";
+        // function randomHexaNumberGenerator(xyz) {
+        //     let hex_array = []
+        //     for (let index = 0; index < xyz; index++) {
+        //         hexa = ''
+        //         for (let i = 0; i < 6; i++) {
+        //             hexa += (given[Math.floor(Math.random() * 15)])
+        //         }
+        //         hex_array.push(`#${hexa}`)
+        //     }
+        //     console.log(hex_array)
 
-            // console.log(`#${hexa}`)
+        //     // console.log(`#${hexa}`)
 
-            // return (`#${hexa}`);
+        //     // return (`#${hexa}`);
 
-        }
-        let any = parseInt(prompt('how many numbers'))
-        randomHexaNumberGenerator(any)
+        // }
+        // // let any = parseInt(prompt('how many numbers'))
+        // randomHexaNumberGenerator(10)
 
+
+      
 
     </script>
 </body>
