--- a/Day 8/Exercise/Level 3/level3.html
+++ b/Day 8/Exercise/Level 3/level3.html
@@ -40,7 +40,7 @@
                 return this.balance;
             },
             accountinfo() {
-                console.log('Name:', this.firstName + ' ' + this.lastName);
+                console.log('Name:', this.firstName + " "+ this.secondName);
                 console.log('My account balance:',this.balance)
             }
 
@@ -125,13 +125,15 @@
     likes: ['fg12cy']
   }
 ]
-//         arr = [];
-//         let signUp =
+        arr = [];
+        let signUp =
 // for (const user of users) {
-//     if (user.isLoggedIn === isLoggedIn) 
+//     if (user.isLoggedIn === isLoggedIn) {
+//         console.log()
+//     }
     
 // }
-    // console.log(arr);
+    console.log(arr);
 
 
      // level 3 
@@ -167,7 +169,7 @@ function likeProduct() {
     }
   } return result;
 }
-console.log(likeProduct())
+console.log(likeProduct());
     </script>
 </body>
 
