--- a/Day 22/Exercise/Level 3/level3.html
+++ b/Day 22/Exercise/Level 3/level3.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 24 Level 2</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Day 22 Level 3</title>
 </head>
+
 <body>
     <div class="main_container">
-    <div class="press">
-        Press Any Keyboard Key
+        <h1>Kanak Sehrawat Challenge in 2024</h1>
+        <h3>Ek kdm saflta ki aur</h2>
+        <div class="container"></div>
     </div>
-</div>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
