--- a/Day 7/Level 3/level3.html
+++ b/Day 7/Level 3/level3.html
@@ -256,25 +256,25 @@
 
 
         // q18
-        let alpNum = /[\w_$]/;
-        let num = '0123456789';
-        function isValidVariable(given) {
-            if(!given[0].match(num)) {
+//         let alpNum = /[\w_$]/;
+//         let num = '0123456789';
+//         function isValidVariable(given) {
+//             if(!given[0].match(num)) {
                 
             
-            for(let i = 1; i < given.length; i++) {
-                if(given[i].match(alpNum))
-                {
-                    console.log("It is valid.")
-                }
-                else {
-                    console.log("It is invalid.");
-                    break;
-                }
-            }
-        }
-        }
-console.log(isValidVariable("akfj34"));
+//             for(let i = 1; i < given.length; i++) {
+//                 if(given[i].match(alpNum))
+//                 {
+//                     console.log("It is valid.")
+//                 }
+//                 else {
+//                     console.log("It is invalid.");
+//                     break;
+//                 }
+//             }
+//         }
+//         }
+// (isValidVariable("akfj@34"));
 
 
 
