--- a/Day 12/Level 1/level1.html
+++ b/Day 12/Level 1/level1.html
@@ -30,10 +30,7 @@
         console.log(distance);
 
         //q3
-        // is_valid_variable('first_name') # True
-        // is_valid_variable('first-name') # False
-        // is_valid_variable('1first_name') # False
-        // is_valid_variable('firstname') # True
+       
 
         function is_valid_variable(name) {
             let valid_rule = /^[a-z|A-Z|$|_][0-9|A-Z|a-z]*?/
@@ -45,7 +42,7 @@
             }
 
         }
-        console.log(is_valid_variable('k32anak'))
+        console.log(is_valid_variable('@32anak'))
 
 
 
