--- a/Day 19/Exercise/Level 1/level1.html
+++ b/Day 19/Exercise/Level 1/level1.html
@@ -6,6 +6,19 @@
     <title>Day 19 Level 1</title>
 </head>
 <body>
+
+    <script>
+        //q1
+        function outerFunction() {
+            let name = "Kanak Sehrawat";
+            function displayName() {
+                console.log(name);
+            }
+            displayName();
+        }
+       const myClosure =  outerFunction()
+       console.log(myClosure())
+    </script>
     
 </body>
 </html>
