--- a/Day 1/Exercise/questions.html
+++ b/Day 1/Exercise/questions.html
@@ -12,7 +12,9 @@
      <!-- QUES 2 -->
     <!-- Welcome to 30DaysOfJavaScript -->
      
-    <script src="variable.js"></script>
+    <script src="variable.js">
+        //*************Day 1 completed***********
+    </script>
 
 </body>
 </html>
