--- a/Day 13/Level 3/Level3.html
+++ b/Day 13/Level 3/Level3.html
@@ -41,6 +41,7 @@
         console.log(while_arr)
         console.timeEnd('Time taken by while loop')
 
+        //*************Day completed***********
 
     </script>
 </body>
