--- a/Day 15/Level 3/level3.html
+++ b/Day 15/Level 3/level3.html
@@ -165,6 +165,8 @@
         billing.addExpense = 1500;
         console.log(billing.accountInfo())
 
+        //*************Day completed***********
+
     </script>
 </body>
 
