--- a/Day 16/Level 3/level3.html
+++ b/Day 16/Level 3/level3.html
@@ -112,6 +112,9 @@
         //q2
         const txt_skills = JSON.parse(txt, [skills])
         console.log(txt_skills)
+
+        //*************Day completed***********
+
     </script>
 </body>
 
