--- a/Day 17/level2&3.html
+++ b/Day 17/level2&3.html
@@ -30,6 +30,10 @@
 
 //q1
 console.log(JSON.parse(localStorage.getItem('student')))
+
+
+        //*************Day completed***********
+
     </script>
 </body>
 </html>
