--- a/Day 19/Exercise/Level 3/level3.html
+++ b/Day 19/Exercise/Level 3/level3.html
@@ -68,7 +68,11 @@
         }
         const myClosure = personAccount()
 
+        //*************Day completed***********
+    
+    
     </script>
+
 </body>
 
 </html>
