--- a/Day 7/Level 3/level3.html
+++ b/Day 7/Level 3/level3.html
@@ -317,6 +317,8 @@
         }
         let countries = ['India', 'Pakistan', 'America', 'USA'];
         console.log(reverseCountries(countries));
+//*************Day completed***********
+
 
     </script>
 
