--- a/Day 8/Exercise/Level 3/level3.html
+++ b/Day 8/Exercise/Level 3/level3.html
@@ -170,6 +170,8 @@ function likeProduct() {
   } return result;
 }
 console.log(likeProduct());
+//*************Day completed***********
+
     </script>
 </body>
 
